@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.5
 Date: 22/01/26
+  Bugfixes:
+    - Hotfix for game crashing when loading a pre-1.5.3 save and then trying to find more dungeons.
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.4
 Date: 21/1/26
